# linkerhand_data_collection_ws

./: .gitignore  README.md  README_CN.md  data_structure.txt  requirements.txt  start_double_linkerhand_grasp.sh  start_linkerhand_piper_grasp.sh  task_config.json
scripts/: 99-linkerhand-can.rules  apply_task_config.sh  can_muti_activate.sh  detect_cameras.sh  detect_hand_config  detect_hand_config.cpp  extract_episode_data.py  manual_recording_control.sh  quick_start_hand.sh  test_can_status.sh  update_task_configs.py
src/exhand_read/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/exhand_read/exhand_read/: exhand_node.cpp  hand_control.cpp  uart_frame_command.cpp
src/exhand_read/include/exhand_read/: exhand_node.hpp  hand_control.hpp  uart_frame_command.hpp
src/exhand_read/launch/: exhand.launch.py
src/linkerhand_cl/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/linkerhand_cl/include/linkerhand_cl/: can_receiver.hpp  can_sender.hpp  hand_control.hpp
src/linkerhand_cl/launch/: hand_control.launch.py  linker_hand.launch.py  linker_hand_double.launch.py
src/linkerhand_cl/linkerhand_cl/: can_receiver.cpp  can_sender.cpp  hand_control.cpp  hand_control_node.cpp
src/linkerhand_data_collection_srv/: CMakeLists.txt  package.xml  setup.py
src/linkerhand_data_collection_srv/configs/: camera_serial_numbers.yaml  hardware_presets.yaml
src/linkerhand_data_collection_srv/configs/tasks/: double_linkerhand_grasp.yaml  linkerhand_piper_grasp.yaml
src/linkerhand_data_collection_srv/launch/: linkerhand_data_collection_srv.launch.py  multi_camera_launch.py  setup_can.launch.py
src/linkerhand_data_collection_srv/resource/: linkerhand_data_collection_srv
src/linkerhand_data_collection_srv/scripts/: linkerhand_data_collection.py
src/linkerhand_data_collection_srv/scripts/utils/: color_msg.py  config_loader.py  file_control.py  hardware_detector.py  process_task_config.py  real_env.py  record_episodes.py  record_episodes_video.py  task_controller.py  time_sync.py  train_control.py
src/linkerhand_data_collection_srv/scripts/utils/db/: linkerhand_aloha_database.db.bak_2025-08-13_13-10-08  sqlite_manager.py
src/linkerhand_data_collection_srv/scripts/utils/recorders/: README.md  README_zed_direct.md  __init__.py  arm_recorder.py  episode_writer.py  exhand_recorder.py  linkerhand_recorder.py  piper_recorder.py  piper_recorder_adapter.py  realsense_ros2_recorder.py  video_writer.py
src/linkerhand_data_collection_srv/scripts/utils/recorders/legacy/: README.md  camera_info_recorder.py  image_recorder.py
src/linkerhand_replay_sdk/: linkerhand_replay_All.py
src/linkerhand_replay_sdk/utils/: double_linker_control.py  mapping.py  piper_recorder_adapter.py
